# rs41_v2-rs

./: .gitignore  Cargo.toml  Embed.toml  FLASH_ME.md  LICENSE  README.md
hw/RS41_V2/: RS41_V2.kicad_pro  RS41_V2.kicad_sch
src/: main.rs
