[package]
name = "rs41_test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = { version = "1.1.3", default-features = false }
stm32l4xx-hal = { version = "0.7", features = ["stm32l412"] }
embedded-hal = "0.2.7"
panic-halt = "^0.2.0"
systick-monotonic = "1.0.1"
si4032_driver = {version = "0.1.0", path = "../si4032_driver-rs"}

[profile.dev]
opt-level = "s"
[profile.release]
